--- a/package.json
+++ b/package.json
@@ -20,60 +20,63 @@
     "generate": "ng generate"
   },
   "dependencies": {
-    "@angular/animations": "^11.0.8",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "^11.0.8",
-    "@angular/compiler": "^11.0.8",
-    "@angular/core": "^11.0.8",
-    "@angular/forms": "^11.0.8",
-    "@angular/localize": "^11.0.8",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/localize": "^11.2.14",
     "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "^11.0.8",
-    "@angular/platform-browser-dynamic": "^11.0.8",
-    "@angular/router": "^11.0.8",
-    "@angular/service-worker": "^11.0.8",
-    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@angular/material-moment-adapter": "^12.0.5",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
+    "@angular/service-worker": "^11.2.14",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngx-translate/core": "^13.0.0",
-    "@rxweb/reactive-form-validators": "^2.1.2",
-    "angular-datatables": "^11.1.1",
+    "@rxweb/reactive-form-validators": "^2.1.3",
+    "angular-datatables": "^11.2.0",
     "bootstrap": "^5.0.1",
-    "datatables.net": "^1.10.20",
-    "datatables.net-dt": "^1.10.20",
+    "datatables.net": "^1.10.25",
+    "datatables.net-dt": "^1.10.25",
     "jquery": "^3.6.0",
-    "postcss": "^8.3.0",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.1"
+    "moment": "^2.29.1",
+    "postcss": "^8.3.5",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.3.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.3",
+    "@angular-devkit/build-angular": "^12.0.5",
     "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "^11.0.8",
-    "@angular/language-service": "^11.0.8",
-    "@biesbjerg/ngx-translate-extract": "^7.0.3",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
+    "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@ngneat/until-destroy": "^8.0.3",
-    "@ngx-rocket/scripts": "^5.0.0",
+    "@ngx-rocket/scripts": "^5.1.0",
     "@types/datatables.net": "^1.10.18",
-    "@types/jasmine": "^3.6.2",
-    "@types/jasminewd2": "^2.0.8",
+    "@types/jasmine": "^3.7.7",
+    "@types/jasminewd2": "^2.0.9",
     "@types/jquery": "^3.3.33",
-    "@types/node": "^12.19.12",
-    "codelyzer": "^6.0.1",
+    "@types/node": "^12.20.15",
+    "codelyzer": "^6.0.2",
     "hads": "^3.0.0",
     "htmlhint": "^0.14.2",
     "https-proxy-agent": "^5.0.0",
     "husky": "^4.3.6",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "^6.3.3",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "karma-junit-reporter": "^2.0.1",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
+    "prettier": "^2.3.1",
+    "pretty-quick": "^3.1.1",
     "protractor": "~7.0.0",
     "stylelint": "~13.8.0",
     "stylelint-config-prettier": "^8.0.2",
@@ -83,7 +86,7 @@
     "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~4.0.5"
+    "typescript": "^4.0.8"
   },
   "prettier": {
     "singleQuote": true,
