--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angularcrud": {
+    "projetohq": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -79,11 +79,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angularcrud:build"
+            "browserTarget": "projetohq:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angularcrud:build:production"
+              "browserTarget": "projetohq:build:production"
             },
             "ci": {
               "progress": false
@@ -93,7 +93,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angularcrud:build"
+            "browserTarget": "projetohq:build"
           }
         },
         "test": {
@@ -131,18 +131,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angularcrud:serve"
+            "devServerTarget": "projetohq:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angularcrud:serve:production"
+              "devServerTarget": "projetohq:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angularcrud",
+  "defaultProject": "projetohq",
   "cli": {
     "analytics": false
   }
