--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "ng": "ng",
-    "build": "npm run write:env -s && ng build --prod",
-    "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js",
-    "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
+    "ng": "SET NODE_OPTIONS=--openssl-legacy-provider && ng",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng build --prod",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng serve --proxy-config proxy.conf.js",   
+    "serve:sw": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
     "test": "npm run write:env -s && ng test",
     "test:ci": "npm run write:env -s && npm run lint -s && ng test --configuration=ci",
