--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "ng": "SET NODE_OPTIONS=--openssl-legacy-provider && ng",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng build --prod",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng build --configuration production",
     "start": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng serve --proxy-config proxy.conf.js",
     "serve:sw": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
@@ -20,19 +20,19 @@
     "generate": "ng generate"
   },
   "dependencies": {
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.17",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/localize": "^11.2.14",
+    "@angular/common": "^12.2.17",
+    "@angular/compiler": "^12.2.17",
+    "@angular/core": "^12.2.17",
+    "@angular/forms": "^12.2.17",
+    "@angular/localize": "^12.2.17",
     "@angular/material": "^11.2.13",
     "@angular/material-moment-adapter": "^12.0.5",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@angular/service-worker": "^11.2.14",
+    "@angular/platform-browser": "^12.2.17",
+    "@angular/platform-browser-dynamic": "^12.2.17",
+    "@angular/router": "^12.2.17",
+    "@angular/service-worker": "^12.2.17",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ngx-translate/core": "^13.0.0",
     "@rxweb/reactive-form-validators": "^2.1.3",
@@ -45,13 +45,13 @@
     "postcss": "^8.3.5",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
-    "zone.js": "^0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.5",
-    "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "^12.2.17",
+    "@angular/language-service": "^12.2.17",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@ngneat/until-destroy": "^8.0.3",
