--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "ng": "SET NODE_OPTIONS=--openssl-legacy-provider && ng",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng build --configuration production",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng build --prod",
     "start": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng serve --proxy-config proxy.conf.js",
     "serve:sw": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
@@ -20,22 +20,24 @@
     "generate": "ng generate"
   },
   "dependencies": {
-    "@angular/animations": "^13.4.0",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "^13.4.0",
-    "@angular/compiler": "^13.4.0",
-    "@angular/core": "^13.4.0",
-    "@angular/forms": "^13.4.0",
-    "@angular/localize": "^13.4.0",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/localize": "^11.2.14",
     "@angular/material": "^11.2.13",
     "@angular/material-moment-adapter": "^12.0.5",
-    "@angular/platform-browser": "^13.4.0",
-    "@angular/platform-browser-dynamic": "^13.4.0",
-    "@angular/router": "^13.4.0",
-    "@angular/service-worker": "^13.4.0",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
+    "@angular/service-worker": "^11.2.14",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@rxweb/reactive-form-validators": "^2.1.3",
+    "angular-datatables": "^11.2.0",
     "bootstrap": "^5.0.1",
     "datatables.net": "^1.10.25",
     "datatables.net-dt": "^1.10.25",
@@ -44,13 +46,13 @@
     "postcss": "^8.3.5",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.11",
-    "@angular/cli": "~13.3.11",
-    "@angular/compiler-cli": "^13.4.0",
-    "@angular/language-service": "^13.4.0",
+    "@angular-devkit/build-angular": "^12.0.5",
+    "@angular/cli": "~11.0.6",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@ngneat/until-destroy": "^8.0.3",
@@ -84,7 +86,7 @@
     "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.0.8"
   },
   "prettier": {
     "singleQuote": true,
