--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "ng": "SET NODE_OPTIONS=--openssl-legacy-provider && ng",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng build --prod",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng build --configuration production",
     "start": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run write:env -s && ng serve --proxy-config proxy.conf.js",
     "serve:sw": "SET NODE_OPTIONS=--openssl-legacy-provider && npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
@@ -44,11 +44,11 @@
     "postcss": "^8.3.5",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
-    "zone.js": "^0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.5",
-    "@angular/cli": "~11.0.6",
+    "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "^13.4.0",
     "@angular/language-service": "^13.4.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
