--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@angular/router": "^15.2.9",
     "@angular/service-worker": "^15.2.9",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@ngx-translate/core": "^13.0.0",
+    "@popperjs/core": "^2.11.6",
     "@rxweb/reactive-form-validators": "^2.1.3",
     "bootstrap": "^5.0.1",
     "datatables.net": "^1.10.25",
