--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "@ngx-translate/core": "^13.0.0",
     "@popperjs/core": "^2.11.6",
     "@rxweb/reactive-form-validators": "^2.1.3",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "datatables.net": "^1.10.25",
     "datatables.net-dt": "^1.10.25",
+    "fontawesome-free": "^1.0.4",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "postcss": "^8.3.5",
