--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,19 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
-<<<<<<< HEAD
-    "downlevelIteration": true,
-=======
     "module": "es2020",
     "moduleResolution": "node",
->>>>>>> 01cf51104e28bd9d657bcc309e2ef41802fda682
+    "resolveJsonModule": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "importHelpers": true,
-<<<<<<< HEAD
-    "target": "es2022",
-    "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-=======
     "noImplicitAny": true,
-    "target": "ES2022",
+    "target": "es2015",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
     "baseUrl": "./",
@@ -39,16 +23,12 @@
       "@core/*": ["src/app/@core/*"],
       "@shared": ["src/app/@shared"],
       "@shared/*": ["src/app/@shared/*"],
-      "@env/*": ["src/environments/*"],
-      "@angular/*": ["./node_modules/@angular/*"]
-    },
->>>>>>> 01cf51104e28bd9d657bcc309e2ef41802fda682
-    "useDefineForClassFields": false
+      "@env/*": ["src/environments/*"]
+    }
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
+    "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "preserveWhitespaces": true
   }
 }
